--- a/productlist.html
+++ b/productlist.html
@@ -4,9 +4,9 @@
     <title>Wing the Air</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="/css/productlist.css" type="text/css" media="all" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/jquery-3.5.1.js" type="text/javascript"></script>
     <script src="/js/app.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
 <div class="shell">
@@ -20,8 +20,15 @@
         <!-- First Tab Content -->
             <div class="tab-content" style="display: block;">
               <div class="items">
+                <div class="load-wrapp">
+                  <div class="load-3">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                  </div>
+                </div>
                 <ul id="productList">
-                  <li>
+                  <!-- <li>
                     <div class="image">
                       <a href="#"
                         ><img src="css/images/image1.jpg" alt=""
@@ -33,121 +40,17 @@
                     <p class="price">
                       售價: <strong>NT$ 3800</strong>
                     </p>
-                  </li>
-                  <!-- <li>
-                    <div class="image">
-                      <a href="#"
-                        ><img src="css/images/image2.jpg" alt=""
-                      /></a>
-                    </div>
-                    <p>
-                      鞋款: <span class="shoe-style">Mile Rider MR DOODLEddddddddddddd</span><br />
-                      分類 : <span>8/8.5/9.5/10/11</span><br />
-                      Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">
-                      Wholesale Price: <strong>53 USD</strong>
-                    </p>
-                  </li>
-                  <li>
-                    <div class="image">
-                      <a href="#"
-                        ><img src="css/images/image3.jpg" alt=""
-                      /></a>
-                    </div>
-                    <p>
-                      鞋款: <span class="shoe-style">Mile Rider MR DOODLEddddddddddddd</span><br />
-                      Size List : <span>8/8.5/9.5/10/11</span><br />
-                      Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">
-                      Wholesale Price: <strong>53 USD</strong>
-                    </p>
-                  </li>
-                  <li>
-                    <div class="image">
-                      <a href="#"
-                        ><img src="css/images/image4.jpg" alt=""
-                      /></a>
-                    </div>
-                    <p>
-                      鞋款: <span class="shoe-style">Mile Rider MR DOODLEddddddddddddd</span><br />
-                      Size List : <span>8/8.5/9.5/10/11</span><br />
-                      Brand Name: <a href="#"><span>Adidas Shoes</span></a>
-                    </p>
-                    <p class="price">
-                      Wholesale Price: <strong>53 USD</strong>
-                    </p>
-                  </li>
-                  <li>
-                    <div class="image">
-                      <a href="#"
-                        ><img src="css/images/image4.jpg" alt=""
-                      /></a>
-                    </div>
-                    <p>
-                      鞋款: <span class="shoe-style">Mile Rider MR DOODLEddddddddddddd</span><br />
-                      Size List : <span>8/8.5/9.5/10/11</span><br />
-                      Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">
-                      Wholesale Price: <strong>53 USD</strong>
-                    </p>
-                  </li>
-                  <li>
-                    <div class="image">
-                      <a href="#"
-                        ><img src="css/images/image3.jpg" alt=""
-                      /></a>
-                    </div>
-                    <p>
-                      鞋款: <span class="shoe-style">Mile Rider MR DOODLEddddddddddddd</span><br />
-                      Size List : <span>8/8.5/9.5/10/11</span><br />
-                      Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">
-                      Wholesale Price: <strong>53 USD</strong>
-                    </p>
-                  </li>
-                  <li>
-                    <div class="image">
-                      <a href="#"
-                        ><img src="css/images/image2.jpg" alt=""
-                      /></a>
-                    </div>
-                    <p>
-                      鞋款: <span class="shoe-style">Mile Rider MR DOODLEddddddddddddd</span><br />
-                      Size List : <span>8/8.5/9.5/10/11</span><br />
-                      Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">
-                      Wholesale Price: <strong>53 USD</strong>
-                    </p>
-                  </li>
-                  <li>
-                    <div class="image">
-                      <a href="#"
-                        ><img src="css/images/image1.jpg" alt=""
-                      /></a>
-                    </div>
-                    <p>
-                      鞋款: <span class="shoe-style">Mile Rider MR DOODLEddddddddddddd</span><br />
-                      Size List : <span>8/8.5/9.5/10/11</span><br />
-                      Brand Name: <a href="#">Adidas Shoes</a>
-                    </p>
-                    <p class="price">
-                      Wholesale Price: <strong>53 USD</strong>
-                    </p>
                   </li> -->
+
                 </ul>
                 <div class="cl">&nbsp;</div>
               </div>
             </div>
             <!-- End First Tab Content -->
-      <!-- End Container -->
-    </div>
-    <!-- End Content -->
-  </div>
+            <!-- End Container -->
+          </div>
+          <!-- End Content -->
+        </div>
   <!-- End Main -->
 </div>
 
