--- a/productlist.html
+++ b/productlist.html
@@ -3,10 +3,10 @@
   <head>
     <title>Wing the Air</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="/css/productlist.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./css/productlist.css" type="text/css" media="all" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/js/jquery-3.5.1.js" type="text/javascript"></script>
-    <script src="/js/app.js" type="text/javascript"></script>
+    <script src="./js/jquery-3.5.1.js" type="text/javascript"></script>
+    <script src="./js/app.js" type="text/javascript"></script>
   </head>
   <body>
 <div class="shell">
